Add post - :not CSS pseudo class

--- a/src/pages/404.mdx
+++ b/src/pages/404.mdx
@@ -7,6 +7,6 @@ import Seo from '../components/Seo';
 
 Couldn't find that page :(
 
-If you think I did something wrong here please tell me [here](/contact).
+If you think I did something wrong please tell me [here](/contact).
 
 export default Layout;
