--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -5,7 +5,7 @@ import Seo from '../components/Seo';
 
 # Contact
 
-If you have any ideas, a cool story or just chat a little, you are more than welcome to contact me. Just choose your preferred media and fire away.
+If you have any ideas, a cool story or just want to chat a little, you are more than welcome to contact me. Just choose your preferred media and fire away.
 
 If you are a recruiter please note I won't connect on LinkedIn if I don't know you or no message is included.
 
