Add image support in mdx files and add profile picture

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -1,9 +1,12 @@
 import Layout from '../components/Layout';
 import Seo from '../components/Seo';
+import ProfilePicture from '../components/ProfilePicture';
 
 <Seo pageTitle="About me" />
 
 # About me
+
+![Erik Samuelsson](../../content/images/erik-samuelsson.jpg)
 
 My name is Erik Samuelsson and I am a professional web developer from Malmö, Sweden.
 
@@ -17,7 +20,7 @@ I love structure and perfection, both in code and in visual elements. I can spen
 
 I'm a front-end developer at heart interested in creating good UI/UX for the web with pixel perfection shooting through the roof. I love structure and re-usability and believe the code should look as good as the site itself. I have worked full-stack a lot and as long as I have a Mac with an open terminal I'm good to go.
 
-I primarily work with front-end JavaScript (currently a lot of React) but I have experience in many web related techniques. For example building APIs, NodeJS, databases, CI/CD and web servers.
+I primarily work with front-end JavaScript (currently a lot of React) but I have experience in many web related areas. For example building APIs, NodeJS, databases, CI/CD and web servers.
 
 ## Some cool years
 
