fix: 🐛 some spelling and link paths

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -38,7 +38,7 @@ I primarily work with front-end JavaScript (currently a lot of React) but I have
 
 * **Computer:** MacBook Pro 15" 2018
 * **Display:** LG 34GK950F - 34" Ultrawide
-* **Mouse:** Finalmouse Ultralight 2 and Apple Magic Trackpad
+* **Mouse:** Finalmouse Ultralight 2 and Apple Magic Trackpad 2
 * **Keyboard:** Some custom built mechanical keyboard
 * **IDE:** WebStorm
 * **Terminal:** iTerm2 with oh-my-zsh
