--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -1,5 +1,6 @@
 import Layout from '../components/Layout';
 import Seo from '../components/Seo';
+import TimeLine from '../components/TimeLine';
 
 <Seo pageTitle="About me" />
 
@@ -23,16 +24,7 @@ I primarily work with front-end JavaScript (currently a lot of React) but I have
 
 ## Some cool years
 
-* **1988:** Yaay! I was born.
-* **1994:** My dad buys our first computer and I'm hooked.
-* **2001:** I start building my own homepages, a lot of table elements.
-* **2007:** Buy my first Mac before even using one ever.
-* **2008:** Start working in an electronic retail store.
-* **2010:** I launch a quite popular iPhone blog built on WordPress.
-* **2011:** I start my own company, doing web design.
-* **2012:** I join Mensa Sweden.
-* **2015:** I graduate from the University.
-* **2016:** I start working professionally as a web developer.
+<TimeLine />
 
 ## Tech stack
 
