Update tech stack

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -29,8 +29,8 @@ I primarily work with front-end JavaScript (currently a lot of React) but I have
 ## Tech stack
 
 * **Computer:** MacBook Pro 15" 2018
-* **Display:** LG 34GK950F - 34" Ultrawide
-* **Mouse:** Finalmouse Ultralight 2 and Apple Magic Trackpad 2
+* **Display:** LG 34GK950F - 34" UltraWide
+* **Mouse:** Glorious Model O and Apple Magic TrackPad 2
 * **Keyboard:** Some custom built mechanical keyboard
 * **IDE:** WebStorm
 * **Terminal:** iTerm2 with oh-my-zsh
