Change email to a non clickable link for spam prevention

--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -9,7 +9,7 @@ If you have any ideas, a cool story or just want to chat a little, you are more 
 
 If you are a recruiter please note I won't connect on LinkedIn if I don't know you or no message is included.
 
-* **Email**: [hello@eriksamuelsson.com](mailto:hello@eriksamuelsson.com?subject=waddap)
+* **Email**: hello [_at_] eriksamuelsson [_dot_] com
 * **Twitter**: [ErikSamuelsson](https://twitter.com/ErikSamuelsson)
 * **LinkedIn**: [eriksamuelsson](https://www.linkedin.com/in/eriksamuelsson/)
 * **GitHub**: [samuelsson](https://github.com/samuelsson)
