Add new page for uses

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -28,13 +28,6 @@ I primarily work with front-end JavaScript (currently a lot of React) but I have
 
 ## Tech stack
 
-* **Computer:** MacBook Pro 15" 2018
-* **Display:** LG 34GK950F - 34" UltraWide
-* **Mouse:** Glorious Model O and Apple Magic TrackPad 2
-* **Keyboard:** Some custom built mechanical keyboard
-* **IDE:** WebStorm
-* **Terminal:** iTerm2 with oh-my-zsh
-* **Hosting:** DigitalOcean
-* **CI/CD:** Self-hosted Drone CI
+So what what are all the applications and tools is use? This list grew so it's now located under its own page, here is what Erik Samuelsson **[/uses](/uses)**.
 
 export default Layout;
