--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -28,6 +28,6 @@ I primarily work with front-end JavaScript (currently a lot of React) but I have
 
 ## Tech stack
 
-So what what are all the applications and tools is use? This list grew so it's now located under its own page, here is what Erik Samuelsson **[/uses](/uses)**.
+So what what are all the applications and tools is use? This list grew so it's now located under its own page, here is what Erik Samuelsson **[uses](/uses)**.
 
 export default Layout;
