chore: 🤖 update about and contact page

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -9,7 +9,9 @@ import TimeLine from '../components/TimeLine';
 
 My name is Erik Samuelsson and I am a professional web developer from Malmö, Sweden.
 
-I am one of those geeks who sits in front of the computer all day long. Coding, browsing Reddit, playing online games or drooling over new tech on blogs. I’ve always loved everything IT related and have been building and tinkering with software since I was a kid - especially web related.
+I am one of those geeks who sit in front of the computer all day long. Coding, browsing Reddit, playing online games or drooling over new tech on blogs. I’ve always loved everything IT related and have been building and tinkering with software since I was a kid - especially web related.
+
+I'm also an online privacy advocate. Keeping tracking and privacy infringement by companies like Google and Facebook to a minimum shapes everything I do. Not because I have anything to hide but I don't want to voluntarily let companies map my whole life.
 
 At Lund University I studied information systems with focus on informatics.
 
@@ -27,4 +29,4 @@ I primarily work with front-end JavaScript (currently a lot of React) but I have
 
 ## Tech stack
 
-So what what are all the applications and tools is use? This list grew so it's now located under its own page, here is what Erik Samuelsson **[uses](/uses)**.
+So what are all the applications and tools I use? This list grew so it's now located under its own page, here is what Erik Samuelsson **[uses](/uses)**.
